# KenkoGoServer

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Changelog.md  Dockerfile  README.md  build_binary.py  code_lint.py  make_requirements_file.py  mypy.ini  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
.github/workflows/: lint.yaml
api_template/: client.http  gocq_bin_controller.http  http-client.env.json  information_controller.http  instance_controller.http  raw_gocq.http
docs/: BeforeCommit.md
no_use/: Server.py
no_use/GocqProcess/: GocqProcess.py
no_use/HttpServer/: DefaultRouter.py  GocqApi.py
old/: Server.py
old/GocqProcess/: GocqProcess.py
old/HttpServer/: DefaultRouter.py  GocqApi.py  HttpServer.py  WebsocketManager.py
old/configg/: __init__.py
src/: KenkoGo.py  config.yaml.bak  config.yml.bak  kenko_go.py  main.py
src/assets/: default_config.py  gocq_config.py  http_result.py  release.py
src/common/: atomicwrites.py  console.py  release.py  utils.py  yaml_config.py
src/data/: config.yaml.bak
src/exception/: release_not_found_error.py  unknown_system_error.py
src/http_server/: http_server.py  websocket_manager.py
src/module/: Console.py  CqCode.py  DictEx.py  Global.py  Internationalization.py  LoggerEx.py  ServerStatus.py  StrEx.py  ThreadEx.py  UserConfig.py  Utils.py  command_handler.py  console.py  console_argument.py  constans.py  exception_ex.py  global_dict.py  gocq_bin.py  gocq_binary_manager.py  gocq_config.py  utils.py  (+16 more)
(+24 files in other folders)
